src/test/deca/context/invalid/created/SansObjet/IllegalAssignmentVar.deca
// Resultats:
//    Erreur contextuelle
//    Ligne 7 : Illegal assignment beetween int and boolean

{
    int a;
    a = true;
}